[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Xiuyu Li <nickleefly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
yfinance = "^0.2.18"
matplotlib = "^3.7.1"
tensorflow = "^2.12.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"